--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, message| %>
-  <div class="flash-<%= type %>">
+  <div class="flash-<%= type %> dismissable">
     <span><%= message %></span>
   </div>
 <% end %>
