Some base typography

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
 @import "bourbon";
 @import "base/base";
 @import "neat";
+@import "base/type_system";
 
 @import "animate";
 @import "animate/fadeIn";
