--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 
   </head>
   <body>
-    <section class="container">
+
+    <section class="header">
       <div class="flash-messages-container">
         <%= render partial: "shared/flash_messages", flash: flash %>
       </div>
