--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require normalize-rails
+ *= require_self
  */
 
 @import "bourbon";
@@ -25,7 +26,7 @@
 @import "components/dismiss";
 @import "components/textures";
 
-@import "components/external_resource";
+@import "external_resources";
 
 
 .header {
