--- a/app/assets/stylesheets/external_resources.css.scss
+++ b/app/assets/stylesheets/external_resources.css.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the external_resources controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.external-resource {
+  @include outer-container();
+  @include animate(fadeIn, $base-fade-speed);
+
+  .embedded-resource {
+    @include span-columns(6);
+
+
+    // Responsive embed
+    // height: 0;
+    // overflow: hidden;
+    // padding-bottom: 56.25%;
+    position: relative;
+
+    embed,
+    object,
+    iframe {
+      @include position(absolute, 0px null null 0px);
+      width: 100%;
+    }
+  }
+
+  .description {
+    @include span-columns(6);
+  }
+}
