--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.task {
+  @include outer-container();
+  @include animate(fadeIn, $base-fade-speed);
+
+  > .description {
+    @include span-columns(12);
+  }
+
+  > .resources {
+    @include span-columns(12);
+  }
+}
