--- a/app/views/external_resources/_external_resource.html.erb
+++ b/app/views/external_resources/_external_resource.html.erb
@@ -1,4 +1,4 @@
-<section class="external-resource" data-path="<%= url_for(external_resource) %>">
+<section class="external-resource" data-id="<%= external_resource.id %>" data-path="<%= url_for(external_resource) %>">
   <h1><%= external_resource.title %></h1>
 
   <div class="embedded-resource">
