--- a/app/assets/stylesheets/external_resources.css.scss
+++ b/app/assets/stylesheets/external_resources.css.scss
@@ -7,24 +7,25 @@
   @include animate(fadeIn, $base-fade-speed);
 
   > .embedded-resource {
-    @include span-columns(6);
+    @include span-columns(6 of 12);
 
 
     // Responsive embed
     // height: 0;
     // overflow: hidden;
-    // padding-bottom: 56.25%;
-    position: relative;
+    // padding-bottom: 56%; // Some arbitrary ammount
+    // position: relative;
 
-    embed,
-    object,
-    iframe {
-      @include position(absolute, 0px null null 0px);
-      width: 100%;
-    }
+    // embed,
+    // object,
+    // iframe {
+    //   @include position(absolute, 0px null null 0px);
+    //   width: 100%;
+    //   height: 100%;
+    // }
   }
 
   > .description {
-    @include span-columns(6);
+    @include span-columns(6 of 12);
   }
 }
