--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -3,6 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .task {
+  padding-top: $base-spacing;
+
   @include outer-container();
   @include animate(fadeIn, $base-fade-speed);
 
@@ -12,5 +14,49 @@
 
   > .resources {
     @include span-columns(12);
+  }
+
+  > .status {
+    @include span-columns(12);
+    padding-bottom: $base-spacing * 2;
+    padding-top: $base-spacing * 2;
+
+
+    @include animate(fadeIn, $lingering-fade-speed);
+
+    .status-notice {
+      @include span-columns(8);
+      height: 48px;
+    }
+
+    input {
+      @include span-columns(4);
+      height: 48px;
+    }
+
+    input.task-status {
+      float: right;
+      @include transition( all $base-fade-speed );
+
+      &.todo {
+        background-color: darken($success-color, 38%);
+      }
+
+      &.complete {
+        background-color: darken($notice-color, 35%);
+      }
+    }
+
+    input.task-status:hover {
+      @include transition( all $base-fade-speed );
+
+      &.todo {
+        background-color: darken($success-color, 45%);
+      }
+
+      &.complete {
+        background-color: darken($notice-color, 25%);
+      }
+    }
   }
 }
