Nice header for tasks

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,7 @@
 @import "components/notices";
 @import "components/dismiss";
 @import "components/textures";
+@import "components/parallax";
 
 @import "external_resources";
 @import "tasks";
