--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -8,7 +8,13 @@
   @include outer-container();
   @include animate(fadeIn, $base-fade-speed);
 
+  > .title h1 {
+    font-size: 2em;
+    color: #555;
+  }
+
   > .description {
+    padding-top: $base-spacing;
     @include span-columns(12);
   }
 
@@ -20,7 +26,6 @@
     @include span-columns(12);
     padding-bottom: $base-spacing * 2;
     padding-top: $base-spacing * 2;
-
 
     @include animate(fadeIn, $lingering-fade-speed);
 
