--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -3,7 +3,12 @@
   data-complete="<%= complete?(task) %>"
   data-path="<%= url_for(task) %>">
 
-  <h1><%= task.title %></h1>
+  <div class="title parallax-window">
+    <div class="parallax-static-content">
+      <h1><%= task.title %></h1>
+    </div>
+    <div class="parallax-background" style="background-image: url('https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png');"></div>
+  </div>
 
   <div class="description">
     <%= task.description_html %>
