--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -8,13 +8,38 @@
   @include outer-container();
   @include animate(fadeIn, $base-fade-speed);
 
-  > .title h1 {
-    font-size: 2em;
-    color: #555;
+  > .header {
+
+    .title {
+      background: rgba(0, 0, 0, 0.7);
+      margin-top:  $base-spacing*2;
+      margin-bottom:  $base-spacing*2;
+
+      padding-top:  $base-spacing*1;
+      padding-bottom:  $base-spacing*1;
+
+      @include span-columns(6);
+      @include shift(3);
+
+      h1 {
+        margin: 0;
+        padding: 0;
+        font-size: 2em;
+        color: $light-gray;
+      }
+
+
+    }
+  }
+
+  .modified {
+    color: $medium-gray;
+    font-size: 0.8em;
+    line-height: $base-line-height*2;
   }
 
   > .description {
-    padding-top: $base-spacing;
+    padding-top: 0;
     @include span-columns(12);
   }
 
