Skills page layout

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,9 +30,12 @@
 @import "components/textures";
 @import "components/parallax";
 @import "components/footer";
+@import "components/cards";
+@import "components/ribbon";
 
 @import "external_resources";
 @import "tasks";
+@import "skills";
 
 
 .header {
