--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,7 @@
 
     <ul>
       <li><a href="/admin">Admin</a></li>
+      <li><a href="/admin/skill">Skills</a></li>
       <li><a href="/admin/task">Tasks</a></li>
       <li><a href="/admin/user">Users</a></li>
     </ul>
