--- a/app/views/tasks/_card.html.erb
+++ b/app/views/tasks/_card.html.erb
@@ -1,6 +1,6 @@
 <div class="task-card card"
   data-id="<%= task.id %>"
-  data-path="<%= url_for(task) %>"
+  data-path="<%= skill_task_path(@skill, task) %>"
   data-complete="<%= complete?(task) %>">
 
   <% if complete?(task) %>
