--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -25,10 +25,10 @@ $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 
 // Flash and notice colors
-$warning-color: #fff6bf !default;
-$error-color: #fbe3e4 !default;
+$warning-color: $light-yellow;
+$error-color: $light-red;
 $notice-color: #e5edf8 !default;
-$success-color: #e6efc2 !default;
+$success-color: $light-green;
 
 
 // Background Color
