--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .task {
-  padding-top: $base-spacing;
+  padding-top: $base-spacing/2;
 
   @include outer-container();
   @include animate(fadeIn, $base-fade-speed);
@@ -15,8 +15,8 @@
       margin-top:  $base-spacing*2;
       margin-bottom:  $base-spacing*2;
 
-      padding-top:  $base-spacing*1;
-      padding-bottom:  $base-spacing*1;
+      padding-top:  $base-spacing;
+      padding-bottom:  $base-spacing;
 
       @include span-columns(6);
       @include shift(3);
@@ -37,7 +37,7 @@
   }
 
   > .description {
-    padding-top: 0;
+    padding-top: $base-spacing/3;
     @include span-columns(12);
   }
 
@@ -98,5 +98,52 @@
     background-color: lighten($success-color, 10%) !important;
     @include transition (all $base-fade-speed);
 
+  }
+}
+
+.skill-progress {
+  @include animate(fadeIn, $lingering-fade-speed);
+
+  @include span-columns(12);
+  padding-bottom:  $base-spacing;
+  padding-top:  $base-spacing/4;
+
+  span > a {
+    @include transition (all $base-fade-speed ease-in-out);
+
+    color: darken($medium-gray, 10%);
+    font-size: 0.9em;
+    background-color: $notice-color;
+    padding: $base-spacing/3;
+    padding-left: $base-spacing;
+    padding-right: $base-spacing;
+
+    &:hover {
+      color: darken($medium-gray, 25%);
+    }
+  }
+
+  .skill-progress-breadcrumbs {
+    float: right;
+    overflow: hidden;
+
+    li{
+      cursor: pointer;
+      list-style: none;
+      display: inline-block;
+      background: $light-gray;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      margin-right: 10px;
+
+      &[data-complete=true] {
+        background: $success-color;
+      }
+
+      &[data-complete=false] {
+        background: $notice-color;
+      }
+    }
   }
 }
