--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -1,3 +1,7 @@
 <% content_for :title, @skill.title %>
 
+<% content_for :header_bar do %>
+  <%= render partial: 'competencies', object: @skill, as: :skill %>
+<% end %>
+
 <%= render @skill %>
