Adding basic points and competencies

--- a/app/assets/stylesheets/components/_flashes.css.scss
+++ b/app/assets/stylesheets/components/_flashes.css.scss
@@ -36,3 +36,11 @@
 .flash-success {
   @include flash($success-color);
 }
+
+.flash-skill_points {
+  @include flash($success-color);
+}
+
+.flash-task_points {
+  @include flash($success-color);
+}
