--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,10 +33,12 @@
 @import "components/parallax";
 @import "components/cards";
 @import "components/ribbon";
+@import "components/badges";
 
 @import "external_resources";
 @import "tasks";
 @import "skills";
+@import "competencies";
 
 
 body {
