--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -4,6 +4,13 @@
 
   <div class="header parallax-window">
     <div class="parallax-static-content">
+
+      <% if complete?(skill) %>
+        <div class="ribbon-wrapper">
+          <div class="ribbon">Complete</div>
+        </div>
+      <% end %>
+
       <span class="title">
         <h1><%= skill.title %></h1>
       </span>
