Updating skills css

--- a/app/assets/stylesheets/skills.css.scss
+++ b/app/assets/stylesheets/skills.css.scss
@@ -55,3 +55,13 @@
 li.competency-status * span:first-child {
   margin-left: $base-spacing/2;
 }
+
+.card.skill-card[data-complete=true] {
+  @include transition (all $base-fade-speed ease-in-out);
+  color: $medium-gray;
+  background-color: lighten($success-color, 5%) !important;
+
+  &:hover {
+    background-color: lighten($success-color, 10%) !important;
+  }
+}
