--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -5,6 +5,13 @@
 
   <div class="header parallax-window">
     <div class="parallax-static-content">
+
+      <% if complete?(task) %>
+        <div class="ribbon-wrapper">
+          <div class="ribbon">Complete</div>
+        </div>
+      <% end %>
+
       <span class="title">
         <h1><%= task.title %></h1>
       </span>
