--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer-2" role="contentinfo">
   <div class="footer-logo">
-    <%= image_tag("placeholder_logo.png") %>
+    <%= image_tag('placeholder_logo.png') %>
   </div>
 
     <ul>
