--- a/app/assets/stylesheets/components/_header.css.scss
+++ b/app/assets/stylesheets/components/_header.css.scss
@@ -77,6 +77,14 @@ header.navigation {
     }
   }
 
+
+  nav.secondary {
+    @include media ($horizontal-bar-mode) {
+      float: right;
+    }
+  }
+
+
   ul.navigation-menu {
     -webkit-transform-style: preserve-3d;
 // stop webkit flicker
@@ -109,6 +117,9 @@ header.navigation {
     padding-right: 0.8em;
     text-align: right;
     width: 100%;
+
+    color: darken($navigation-color, 10%);
+
 
     @include media ($horizontal-bar-mode) {
       background: transparent;
