--- a/app/views/competencies/_siblings.html.erb
+++ b/app/views/competencies/_siblings.html.erb
@@ -1,12 +1,21 @@
 <nav role="navigation">
   <ul class="navigation-menu">
-    <% competencies.each do |competency| %>
+    <li class="nav-link competency-status">
+      <a href="<%= root_path %>">
+        Feed
+      </a>
+    </li>
+  </ul>
+</nav>
+
+<nav role="navigation" class="secondary">
+  <ul class="navigation-menu">
+    <% current_user.competencies.take(3).each do |competency| %>
+      <% next if competency.id == @competency.id %>
       <li class="nav-link competency-status">
         <a href="<%= competency_path(competency) %>">
           <%= competency.title %>
           <span class="badge-success"><%= competency_percentage(competency) %></span>
-          <span class="badge-success"><%= competency_score(competency) %></span>
-          <span class="badge-notice"><%= skill_completion(competency) %> skills</span>
         </a>
       </li>
     <% end %>
