--- a/app/views/competencies/_subscribe.html.erb
+++ b/app/views/competencies/_subscribe.html.erb
@@ -1,12 +1,12 @@
 <% if subscribed?(competency) %>
   <input
-    data-path="<%= '' %>"
+    data-path="<%= unsubscribe_competency_path(competency) %>"
     type="submit"
     class="competency-subscribe subscribed"
     value="I'm not interested in this anymore">
 <% else %>
   <input
-    data-path="<%= '' %>"
+    data-path="<%= subscribe_competency_path(competency) %>"
     type="submit"
     class="competency-subscribe unsubscribed"
     value="This is important to me">
