--- a/app/views/competencies/_siblings.html.erb
+++ b/app/views/competencies/_siblings.html.erb
@@ -1,4 +1,4 @@
-<nav role="navigation">
+<!-- <nav role="navigation">
   <ul class="navigation-menu">
     <li class="nav-link competency-status">
       <a href="<%= root_path %>">
@@ -6,7 +6,7 @@
       </a>
     </li>
   </ul>
-</nav>
+</nav> -->
 
 <nav role="navigation" class="secondary">
   <ul class="navigation-menu">
