--- a/app/views/competencies/_progress.html.erb
+++ b/app/views/competencies/_progress.html.erb
@@ -1,6 +1,8 @@
 <nav role="navigation">
   <ul class="navigation-menu">
     <% competencies.each do |competency| %>
+      <% next unless competency.subscribed_by?(current_user) %>
+
       <li class="nav-link competency-status">
         <a href="<%= competency_path(competency) %>">
           <%= competency.title %>
